Fix list spacing in selection dropdown

--- a/src/genomes/selection/list/styles.css
+++ b/src/genomes/selection/list/styles.css
@@ -40,7 +40,7 @@
 }
 
 .wgsa-genome-selection-list .ReactVirtualized__Grid__innerScrollContainer {
-  margin-top: 16px; 
+  padding-top: 16px;
 }
 
 .wgsa-list-item {
